--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     </header>
     <nav>
         <a href="#about">About Me</a>
+        <a href="#education">Education</a>
         <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
         <a href="#contact">Contact Information</a>
     </nav>
     <div class="container">
@@ -77,6 +79,50 @@
             <h2>About Me</h2>
             <p>My name is Naveed Ul Hassan. I am a graduate in Applied Chemistry with a Master's degree from Government College University, Pakistan, where I graduated with a 3.8/4.0 GPA and earned the first position (Gold Medalist). My thesis focused on the Ethnobotanical, Phytochemical, and Pharmacological Investigation of the Genus Salvadora.</p>
             <p>In addition to my background in chemistry, I am a skilled Python programmer with expertise in material sciences, molecular modeling, simulations, and bioinformatics. I have worked on several computational and coding projects, applying my skills to areas such as drug discovery, disease prediction, and material characterization.</p>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+            <p><strong>Master of Science, Applied Chemistry</strong><br>
+            Government College University, Pakistan [2016–2018]<br>
+            City: Lahore, Punjab Country: Pakistan<br>
+            Final Grade: 3.8/4.0, Final Rank: 1st Position (Gold-Medalist)<br>
+            Thesis: Ethnobotanical, Phytochemical, and Pharmacological Investigation of Genus Salvadora</p>
+            <p><strong>Bachelor of Science</strong><br>
+            University of the Punjab [16 Aug 2014–16 Aug 2016]<br>
+            Country: Pakistan</p>
+            <h3>Interdisciplinary Exploration: Navigating Beyond the Academic Horizon</h3>
+            <ul>
+                <li>Materials Science for Advanced Technological Applications Specialization (Arizona State University)</li>
+                <li>Introduction to Molecular Spectroscopy (University of Manchester)</li>
+                <li>Organic Solar Cells-Theory and Practice (Technical University of Denmark)</li>
+                <li>Silicon Thin Film Solar Cells (École Polytechnique)</li>
+                <li>Physics of silicon solar cells (École Polytechnique)</li>
+                <li>Advanced Functional Ceramics (Yonsei University)</li>
+                <li>Nanotechnology-A Maker’s Course (Duke, North Carolina State, and University of North Carolina)</li>
+                <li>Nanotechnology and Nanosensors (Technion-Israel Institute of Technology)</li>
+                <li>Transmission electron microscopy for materials science (École Polytechnique Fédérale de Lausanne)</li>
+                <li>Photovoltaic Solar Energy (École Polytechnique)</li>
+                <li>The Sustainable Development Goals - A global, transdisciplinary vision for the future (University of Copenhagen)</li>
+                <li>Data Visualization for Genome Biology (University of Toronto)</li>
+                <li>Genomic Data Science Specialization (Johns Hopkins University)</li>
+                <li>Whole Genome Sequencing of Bacterial Genomes - Tools and Applications (Technical University of Denmark (DTU))</li>
+                <li>AI for Medicine Specialization (DeepLearning.AI)</li>
+                <li>Capstone Project: Advanced AI for Drug Discovery (LearnQuest)</li>
+            </ul>
+            <h3>Synthesis, Characterization, and Computational Skills</h3>
+            <h4>Laboratory Trainings (2017-2019)</h4>
+            <ul>
+                <li>Synthesis and Characterization of MOF-235 for their application as K-ion battery anode.</li>
+                <li>Chemical Vapour Deposition of Cu2ZnSnS4 Thin Films from a Precursor Mixture: Study of Influence of Deposition Parameters on Film Growth and Properties</li>
+                <li>Synthesis Skills: Thin-film electrode deposition (experienced in thin-film deposition techniques such as pulsed laser deposition, chemical vapour deposition, sputtering, spray pyrolysis, spin coating, dip coating, drop casting, and thermal evaporation.</li>
+                <li>Characterization Skills: UV-Vis Spectroscopy, Electrochemical characterization techniques including Cyclic Voltammetry (CV), Chronoamperometry (CA), and Electrochemical Impedance Spectroscopy (EIS). Structural characterization technique (SEM)</li>
+                <li>Coding Skills in Material Sciences: PyBAMM, LAMMPS, GROMACS, RDKit, GPaw, Py4Vasp, Python for mass spectrum analysis</li>
+                <li>Project: Application of Python in DFT- A Case Study of Cathode Material Li2RuO3</li>
+            </ul>
+            <h4>Post Studies Computational Trainings (2022-2024)</h4>
+            <ul>
+                <li>Molecular modeling and simulations (GROMACS, CASTp for binding site prediction), docking and screening (AutoDock4/Vina, SwissDock, PyRx), target prediction (SwissTargetPrediction), structure activity relation and binding affinity studies (CQSAR), ADME prediction (SwissADME), and python scripts for studying drug-target interactions, epitope database and prediction resource (IEDB), ExPASy ProtParam for analyzing protein’s physiochemical parameters, PSI secondary structure prediction using PSIPRED, disulfide bond prediction using DiANNA, alignment-independent prediction of protective antigens using VexiJen, allergenicity prediction using AllerTOP v, and protein structure prediction using trRosetta.</li>
+            </ul>
         </section>
         <section id="projects">
             <h2>Projects</h2>
@@ -112,6 +158,15 @@
                 <h3>Chemical Properties Calculation using RDKit</h3>
                 <a href="https://www.kaggle.com/code/naveedulattock/chemical-property-calculation-with-rdkit" target="_blank">View Project</a>
             </div>
+        </section>
+        <section id="experience">
+            <h2>Professional Experience</h2>
+            <h3>Python Programmer (Remote) [2023-2024]</h3>
+            <ul>
+                <li>Demonstrated expertise in executing and delivering python projects on data analysis and genome sequence analysis.</li>
+                <li>Effectively communicated complex concepts in python to international students via online sessions.</li>
+                <li>Provided timely feedback and evaluation on coursework to support students' learning and progress.</li>
+            </ul>
         </section>
         <section id="contact">
             <h2>Contact Information</h2>
